--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
 <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+  http-equiv="Content-Security-Policy"
+  content="default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'none'; form-action 'self'; img-src 'self' data: https:; font-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self' https://js.paystack.co; connect-src 'self' https://api.dayspringhouse.com https://api.paystack.co; upgrade-insecure-requests"
+/>
+
   <title>Dayspringhouse - Shop</title>
 </head>
 
