--- a/ui/index.html
+++ b/ui/index.html
@@ -11,31 +11,34 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Primary SEO (server will replace placeholders for /product/:id bots) -->
-  <title>__DS_TITLE__</title>
-  <meta name="description" content="__DS_DESC__" />
+  <!-- ✅ Primary SEO defaults (server can override for bots on /product/:id) -->
+  <title>DaySpring — Shop products in Nigeria</title>
+  <meta name="description" data-seo="description"
+    content="Buy quality products on DaySpring. Fast delivery and trusted suppliers." />
 
   <meta name="application-name" content="DaySpring House" />
   <meta name="theme-color" content="#ffffff" />
 
-  <!-- ✅ Canonical -->
-  <link rel="canonical" href="__DS_CANONICAL__" />
+  <!-- ✅ Canonical (default; server can override for product pages) -->
+  <link rel="canonical" data-seo="canonical" href="https://dayspringhouse.com/" />
 
-  <!-- ✅ Open Graph -->
+  <!-- ✅ Open Graph defaults -->
   <meta property="og:site_name" content="DaySpring House" />
-  <meta property="og:type" content="__DS_OG_TYPE__" />
-  <meta property="og:title" content="__DS_OG_TITLE__" />
-  <meta property="og:description" content="__DS_OG_DESC__" />
-  <meta property="og:url" content="__DS_OG_URL__" />
-  <meta property="og:image" content="__DS_OG_IMAGE__" />
+  <meta property="og:type" data-seo="og:type" content="website" />
+  <meta property="og:title" data-seo="og:title" content="DaySpring House — Shop" />
+  <meta property="og:description" data-seo="og:description"
+    content="DaySpring House — shop quality products in Nigeria. Browse our catalogue, add to cart, and checkout securely." />
+  <meta property="og:url" data-seo="og:url" content="https://dayspringhouse.com/" />
+  <meta property="og:image" data-seo="og:image" content="https://dayspringhouse.com/og-image.jpg" />
 
-  <!-- ✅ Twitter -->
+  <!-- ✅ Twitter defaults -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="__DS_TW_TITLE__" />
-  <meta name="twitter:description" content="__DS_TW_DESC__" />
-  <meta name="twitter:image" content="__DS_TW_IMAGE__" />
+  <meta name="twitter:title" data-seo="twitter:title" content="DaySpring House — Shop" />
+  <meta name="twitter:description" data-seo="twitter:description"
+    content="DaySpring House — shop quality products in Nigeria. Browse our catalogue, add to cart, and checkout securely." />
+  <meta name="twitter:image" data-seo="twitter:image" content="https://dayspringhouse.com/og-image.jpg" />
 
-  <!-- ✅ Structured data (kept static to avoid CSP hash issues) -->
+  <!-- ✅ Structured data (helps Google show correct site name) -->
   <script type="application/ld+json">
       {"@context":"https://schema.org","@type":"WebSite","name":"DaySpring House","url":"https://dayspringhouse.com","potentialAction":{"@type":"SearchAction","target":"https://dayspringhouse.com/?q={search_term_string}","query-input":"required name=search_term_string"}}
     </script>
