--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
 
@@ -11,59 +10,60 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Primary SEO defaults (server can override for bots on /product/:id) -->
+  <!-- ✅ Primary SEO (SPA default) -->
   <title>DaySpring — Shop products in Nigeria</title>
-  <meta name="description" data-seo="description"
-    content="Buy quality products on DaySpring. Fast delivery and trusted suppliers." />
+  <meta name="description" content="Buy quality products on DaySpring. Fast delivery and trusted suppliers." />
 
   <meta name="application-name" content="DaySpring House" />
   <meta name="theme-color" content="#ffffff" />
 
-  <!-- ✅ Canonical (default; server can override for product pages) -->
-  <link rel="canonical" data-seo="canonical" href="https://dayspringhouse.com/" />
+  <!-- ✅ Canonical default -->
+  <link rel="canonical" href="https://dayspringhouse.com/" />
 
-  <!-- ✅ Open Graph defaults -->
+  <!-- ✅ Open Graph (default) -->
   <meta property="og:site_name" content="DaySpring House" />
-  <meta property="og:type" data-seo="og:type" content="website" />
-  <meta property="og:title" data-seo="og:title" content="DaySpring House — Shop" />
-  <meta property="og:description" data-seo="og:description"
-    content="DaySpring House — shop quality products in Nigeria. Browse our catalogue, add to cart, and checkout securely." />
-  <meta property="og:url" data-seo="og:url" content="https://dayspringhouse.com/" />
-  <meta property="og:image" data-seo="og:image" content="https://dayspringhouse.com/og-image.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="DaySpring House — Shop" />
+  <meta
+    property="og:description"
+    content="DaySpring House — shop quality products in Nigeria. Browse our catalogue, add to cart, and checkout securely."
+  />
+  <meta property="og:url" content="https://dayspringhouse.com/" />
 
-  <!-- ✅ Twitter defaults -->
+  <!-- ✅ Twitter (default) -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" data-seo="twitter:title" content="DaySpring House — Shop" />
-  <meta name="twitter:description" data-seo="twitter:description"
-    content="DaySpring House — shop quality products in Nigeria. Browse our catalogue, add to cart, and checkout securely." />
-  <meta name="twitter:image" data-seo="twitter:image" content="https://dayspringhouse.com/og-image.jpg" />
+  <meta name="twitter:title" content="DaySpring House — Shop" />
+  <meta
+    name="twitter:description"
+    content="DaySpring House — shop quality products in Nigeria. Browse our catalogue, add to cart, and checkout securely."
+  />
 
-  <!-- ✅ Structured data (helps Google show correct site name) -->
+  <!-- ✅ Structured data for site -->
   <script type="application/ld+json">
-      {"@context":"https://schema.org","@type":"WebSite","name":"DaySpring House","url":"https://dayspringhouse.com","potentialAction":{"@type":"SearchAction","target":"https://dayspringhouse.com/?q={search_term_string}","query-input":"required name=search_term_string"}}
-    </script>
+    {"@context":"https://schema.org","@type":"WebSite","name":"DaySpring House","url":"https://dayspringhouse.com","potentialAction":{"@type":"SearchAction","target":"https://dayspringhouse.com/?q={search_term_string}","query-input":"required name=search_term_string"}}
+  </script>
 
-  <!-- ✅ Your CSP (unchanged) -->
+  <!-- ✅ CSP (client). Adjust if needed for Paystack, API, etc -->
   <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        base-uri 'self';
-        object-src 'none';
-        frame-ancestors 'none';
-        form-action 'self';
-        img-src 'self' data: https:;
-        font-src 'self' data: https:;
-        style-src 'self' 'unsafe-inline';
-        script-src 'self' https://js.paystack.co 'sha256-Crr0k6ehqLlwP6rZg5dzQbxqTcCHFGnFZyNBFv3d/tw=';
-        connect-src 'self' https://api.dayspringhouse.com https://api.paystack.co;
-        upgrade-insecure-requests
-      " />
+    default-src 'self';
+    base-uri 'self';
+    object-src 'none';
+    frame-ancestors 'none';
+    form-action 'self';
+    img-src 'self' data: https:;
+    font-src 'self' data: https:;
+    style-src 'self' 'unsafe-inline';
+    script-src 'self' https://js.paystack.co;
+    connect-src 'self' https://api.dayspringhouse.com https://api.paystack.co;
+    upgrade-insecure-requests
+  " />
 </head>
 
 <body>
   <div id="root"></div>
   <div id="modal-root"></div>
 
+  <!-- Vite will rewrite this in production build -->
   <script type="module" src="/src/main.tsx"></script>
 </body>
-
 </html>
